--- a/guia/modelo.html
+++ b/guia/modelo.html
@@ -194,7 +194,7 @@
     Abertura
   ============================-->
     <section id="abertura" data-aos="fade-in" data-aos-easing="ease-out-back" data-aos-duration="1000">
-      <div class="container-fluid bg-header">
+      <div class="container-fluid bg-header" style="background:url(img/bg-header.jpg) no-repeat 0 0; !important">
         <div class="row justify-content-center h-100">
           <div class="col-12 col-lg-8 text-center h-100 px-0">
 
