--- a/guia/modelo.html
+++ b/guia/modelo.html
@@ -72,7 +72,7 @@
               <li><a href="#" data-toggle="modal" data-target="#modal-apresentacao">Apresentação</a></li>
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 1</p>
-                <a href="#" class="d-block d-md-none">Módulo 1</a>
+                <a href="#" class="d-md-none sf-with-ul">Módulo 1</a>
                 <ul>
                   <li>
                     <h6>Povos indígenas no Brasil</h6>
@@ -85,7 +85,7 @@
               </li>
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 2</p>
-                <a href="#" class="d-block d-md-none">Módulo 2</a>
+                <a href="#" class="d-md-none sf-with-ul">Módulo 2</a>
                 <ul>
                   <li>
                     <h6>Vulnerabilidade dos povos indígena</h6>
@@ -98,7 +98,7 @@
               </li>
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 3</p>
-                <a href="#" class="d-block d-md-none">Módulo 3</a>
+                <a href="#" class="d-md-none sf-with-ul">Módulo 3</a>
                 <ul>
                   <li>
                     <h6>Organização do trabalho e da assistência no subsistema de saúde</h6>
@@ -112,7 +112,7 @@
               </li>
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 4</p>
-                <a href="#" class="d-block d-md-none">Módulo 4</a>
+                <a href="#" class="d-md-none sf-with-ul">Módulo 4</a>
                 <ul>
                   <li>
                     <h6>Vigilância da Covid-19 em comunidades indígenas</h6>
@@ -2428,7 +2428,7 @@
   <script src="js/main-timeline.js"></script>
   <script src="js/timeline-horizontal1.js"></script>
   <!-- <script src="js/timeline-horizontal2.js"></script> -->
-  <script src="../../js/timeline-horizontal2.js"></script>
+  <script src="js/timeline-horizontal2.js"></script>
 
   <!--Acessibilidade-->
   <script src="js/jquery-2.2.1.min.js"></script>
