--- a/guia/modelo.html
+++ b/guia/modelo.html
@@ -73,7 +73,7 @@
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 1</p>
                 <a href="#" class="d-md-none sf-with-ul">Módulo 1</a>
-                <ul>
+                <ul style="display:none !important;">
                   <li>
                     <h6>Povos indígenas no Brasil</h6>
                   </li>
@@ -86,7 +86,7 @@
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 2</p>
                 <a href="#" class="d-md-none sf-with-ul">Módulo 2</a>
-                <ul>
+                <ul style="display:none !important;">
                   <li>
                     <h6>Vulnerabilidade dos povos indígena</h6>
                   </li>
@@ -99,7 +99,7 @@
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 3</p>
                 <a href="#" class="d-md-none sf-with-ul">Módulo 3</a>
-                <ul>
+                <ul style="display:none !important;">
                   <li>
                     <h6>Organização do trabalho e da assistência no subsistema de saúde</h6>
                   </li>
@@ -113,7 +113,7 @@
               <li class="menu-has-children">
                 <p class="d-none d-md-block pb-0 sf-with-ul">Módulo 4</p>
                 <a href="#" class="d-md-none sf-with-ul">Módulo 4</a>
-                <ul>
+                <ul style="display:none !important;">
                   <li>
                     <h6>Vigilância da Covid-19 em comunidades indígenas</h6>
                   </li>
@@ -131,7 +131,8 @@
 
        
         
-      </nav><!-- #nav-menu-container -->
+      </nav>
+      <!-- #nav-menu-container -->
 
     </div>
 
