ajustes texto e vídeo a direita

--- a/guia/modelo.html
+++ b/guia/modelo.html
@@ -2647,37 +2647,38 @@
           <div class="col-12 col-lg-10">
             <h5 class="my-4 p-0 pb-1">Vídeo alinhado à direita</h5>
 
-            <!-- Texto e Vídeo à direita -->
-            <div class="row justify-content-center align-items-center">
-              <div class="col-12 col-md-6 order-2 order-md-1">
-                <p>Este texto está alinhado pelo centro. A classe que configura isso é a <strong>align-items-center</strong>. Basta adicioná-la.</p>
+			<!-- Texto e Vídeo à direita -->
+			<div class="row justify-content-center align-items-center">
+				<div class="col-12 col-md-6 order-2 order-md-1">
+					<p>Este texto está alinhado pelo centro. A classe que configura isso é a <strong>align-items-center</strong>. Basta adicioná-la.</p>
 
-                <p>O simples acesso a escola não garante uma educação de qualidade e nem mesmo o acesso ao
-                  conhecimento.
-                  Assim, compreendemos que as ações vão muito além dos espaços da sala de aula. Mészáros - citando
-                  Gramsci- ressaltou que “educar é colocar fim à separação entre Homo faber e Homo sapiens; é
-                  resgatar o
-                  sentido estruturante da educação e de sua relação com o trabalho, as suas possibilidades
-                  criativas e
-                  emancipatórias (MÉSZAROS, 2014). </p>
-              </div>
+					<p>O simples acesso a escola não garante uma educação de qualidade e nem mesmo o acesso ao
+					conhecimento.
+					Assim, compreendemos que as ações vão muito além dos espaços da sala de aula. Mészáros - citando
+					Gramsci- ressaltou que “educar é colocar fim à separação entre Homo faber e Homo sapiens; é
+					resgatar o
+					sentido estruturante da educação e de sua relação com o trabalho, as suas possibilidades
+					criativas e
+					emancipatórias (MÉSZAROS, 2014). </p>
+				</div>
 
-              <div class="col-11 col-md-6 order-1 order-md-2">
-                <!--Video (embed Youtube ou Vimeo) -->
-                <div class="row justify-content-center mt-5">
-                  <div class="col-12 p-0">
-                    <div class="embed-responsive embed-responsive-16by9">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/3vijLre760w" frameborder="0"
-                            allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                    <p class="reference-title text-center">Vídeo 1 - Rainforests 101 | National Geographic</p>
-                    <p class="source text-center">Fonte: <a href='https://www.youtube.com/watch?v=3vijLre760w' target='_blank'>National Geographic (2019)</a></p>
-                </div>
-                <!--Fim do video -->
-                </div>
-            </div>
-            <!-- Fim de texto e Vídeo à direita -->
-          </div>
+				<div class="col-11 col-md-6 order-1 order-md-2">
+					<!--Video (embed Youtube ou Vimeo) -->
+					<div class="row justify-content-center mt-5">
+						<div class="col-12 p-0">
+							<div class="embed-responsive embed-responsive-16by9">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/3vijLre760w" frameborder="0"
+							allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+							<p class="reference-title text-center">Vídeo 1 - Rainforests 101 | National Geographic</p>
+							<p class="source text-center">Fonte: <a href='https://www.youtube.com/watch?v=3vijLre760w' target='_blank'>National Geographic (2019)</a></p>
+						</div>
+					</div>
+					<!--Fim do video -->
+				</div>
+				<!--Fim da coluna-->
+			</div>
+			<!-- Fim de texto e Vídeo à direita -->
 
         </div>
       </div> <!-- fim container -->
