--- a/guia/modelo.html
+++ b/guia/modelo.html
@@ -1528,6 +1528,12 @@
               </div>
             </div>
             <!-- Fim de Podcast -->
+
+            <p>Alternativa de podcast incorporado. Ex: Áudio hospedado no Soundcloud</p>
+
+            <!-- Podcast incorporado -->
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/788462005&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/epsjv_fiocruz" title="EPSJV/Fiocruz" target="_blank" style="color: #cccccc; text-decoration: none;">EPSJV/Fiocruz</a> · <a href="https://soundcloud.com/epsjv_fiocruz/articulacao-do-subsistema-de-saude-indigena-com-estados-e-municipios-no-enfrentamento-ao-coronavirus" title="Articulação do Subsistema de Saúde Indígena com estados e municípios no enfrentamento ao coronavírus" target="_blank" style="color: #cccccc; text-decoration: none;">Articulação do Subsistema de Saúde Indígena com estados e municípios no enfrentamento ao coronavírus</a></div>
+            <!-- Fim de podcast incorporado -->
   
           </div>
         </div>
