--- a/guia/modelo.html
+++ b/guia/modelo.html
@@ -1534,6 +1534,16 @@
             <!-- Podcast incorporado -->
             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/788462005&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/epsjv_fiocruz" title="EPSJV/Fiocruz" target="_blank" style="color: #cccccc; text-decoration: none;">EPSJV/Fiocruz</a> · <a href="https://soundcloud.com/epsjv_fiocruz/articulacao-do-subsistema-de-saude-indigena-com-estados-e-municipios-no-enfrentamento-ao-coronavirus" title="Articulação do Subsistema de Saúde Indígena com estados e municípios no enfrentamento ao coronavírus" target="_blank" style="color: #cccccc; text-decoration: none;">Articulação do Subsistema de Saúde Indígena com estados e municípios no enfrentamento ao coronavírus</a></div>
             <!-- Fim de podcast incorporado -->
+
+            <p>Quando o podcast for inserido como iframe (alguns links do educare), ele apresentará seu visual nativo, de cada navegador, conforme ilustrado abaixo:</p>
+
+            <!-- Podcast via iframe -->
+            <div class="row justify-content-center">
+              <div class="col-12 col-md-11 p-0" style="height:40px;">
+                <iframe src="https://educare.fiocruz.br/file-storage/fK2Flc91" frameborder="0" style="position: relative; top: 0; height: 100%; width: 100%;"></iframe>
+              </div>
+            </div>
+            <!-- Fim de Podcast via iframe -->
   
           </div>
         </div>
